[package]
name = "tls-interceptor"
version = "0.1.0"
authors = ["Jethro Shuwen Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
"rustls" = "*"
pcap-file = "0.10.0"
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"

[features]
default = []
print = []
