[package]
name = "async-playground"
version = "0.1.0"
authors = ["jethrosun <jethro.rules@real.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-timer = "*"
# tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tokio = { version = "0.2", features = ["full"] }
