[package]
name = "run-p2p"
version = "0.1.0"
authors = ["jethrosun <jethro.s.sun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission = { git = "https://github.com/jethrosun/transmission-rs", branch = "pvn" }
serde_json = "1.0.53"
crossbeam = "0.7.3"
core_affinity = "0.5.10"
