[package]
name = "tls-interceptor"
version = "0.1.0"
authors = ["Jethro Shuwen Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rustls = ">=0.15.1"
pcap-file = "0.10.0"
etherparse = "0.8.0"
smoltcp = ">=0.5.0"
clap = ">=2.32.0"
failure = ">=0.1.5"
futures = ">=0.1.25"
pcap = ">=0.7.0"
env_logger = ">=0.6.0"
net-parser-rs = "0.1.1"

[badges]
