[package]
name = "transmission-client"
version = "0.1.0"
authors = ["Jethro Shuwen Sun <jethro.s.sun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission = { git = "https://github.com/jethrosun/transmission-rs", branch = "pvn" }
